src/antlr/dartParser.java
// Generated from F:/Projects/java/MinaCom/src/antlr\dartParser.g4 by ANTLR 4.12.0
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class dartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, IMPORT_=2, STRING=3, INT=4, LIST=5, LISTVIEW=6, ScrollDirectionKeyWord=7, 
		Axis=8, FLOATINGACTIONBUTTON=9, APPBARScaff=10, APPBARInScaffold=11, TitleKeyWord=12, 
		LISTTILE=13, LeadingKeyWord=14, TrailingKeyWord=15, SubtitleKeyWord=16, 
		ReverseKeyWord=17, BOOLEAN=18, TRY=19, CATCH=20, MainKeyWord=21, RunAppKeyWord=22, 
		MaterialAppKeyWord=23, Home=24, ColorKey=25, AXISATTR=26, INTEGER=27, 
		DOUBLE=28, FromRGBO=29, Color=30, Get=31, GetView=32, Obx=33, GetxController=34, 
		Bindings=35, Implements_keyWord=36, LazyPut=37, MethodCallBack=38, Put=39, 
		Find=40, To=41, VoidDataType=42, Dependencies=43, Dispose=44, Delete=45, 
		RxGetter=46, OnInit=47, OnClose=48, GetMaterialApp=49, EQUALS=50, PLUS_EQUALS=51, 
		MINUS_EQUALS=52, TIMES_EQUALS=53, DIVIDE_EQUALS=54, MODULO_EQUALS=55, 
		PLUS=56, CHILDREN=57, SingleQ=58, DoubleQ=59, MINUS=60, TIMES=61, DIVIDE=62, 
		MODULO=63, AND=64, OR=65, NOT=66, EQUAL_TO=67, NOT_EQUAL_TO=68, GREATER_THAN=69, 
		GREATER_THAN_OR_EQUAL_TO=70, LESS_THAN=71, LESS_THAN_OR_EQUAL_TO=72, Arrow=73, 
		Super=74, Key=75, True=76, False=77, WIDGET=78, CONTAINAR=79, Row=80, 
		COLUMN=81, GESTUREDETECTOR=82, CARD=83, Text=84, MainAxisAligmentKeyWord=85, 
		MainAxisProperties=86, CrossAxisAligmentKeyWord=87, CrossProperties=88, 
		WidthKeyWord=89, HeightKeyWord=90, ONTAP=91, NavigatorKeyWord=92, PushMethods=93, 
		PushNamed=94, FINAL=95, PopMethods=96, MaterialPageRoute=97, Builder=98, 
		START=99, END=100, CENTER=101, STRETCH=102, BUILDM=103, BUILDContext=104, 
		Context=105, CBracketC=106, Dot=107, Return=108, Scaffold=109, BodyScaffold=110, 
		TWODOT=111, INHERITS_KEYWORD=112, TypeWidget=113, CHILD=114, OSP=115, 
		CSP=116, OP=117, CP=118, SemiC=119, THIS=120, Required=121, Name=122, 
		OBracketC=123, InputIntoText=124, Newline=125, Whitespace=126, IDENTIFIER=127, 
		COMMAWidget=128, DecorationContainer=129, OVERRIDE_=130, CLASS_NAME=131, 
		CONST=132, OnPressedKeyWord=133;
	public static final int
		RULE_plur = 0, RULE_classInjection = 1, RULE_class = 2, RULE_classController = 3, 
		RULE_controllerBody = 4, RULE_declareRxList = 5, RULE_declareRxBool = 6, 
		RULE_declareRxInt = 7, RULE_onInitFunction = 8, RULE_oninitBody = 9, RULE_onCloseFunction = 10, 
		RULE_oncloseBody = 11, RULE_classBody = 12, RULE_declareController = 13, 
		RULE_dependenciesInje = 14, RULE_disposeFunction = 15, RULE_disposeBody = 16, 
		RULE_typeInjection = 17, RULE_injectionLazyPut = 18, RULE_injectionPut = 19, 
		RULE_constructor = 20, RULE_constructorBody = 21, RULE_constracterInit = 22, 
		RULE_build = 23, RULE_widget = 24, RULE_scaffold = 25, RULE_bodyScaffold = 26, 
		RULE_return = 27, RULE_returnMaterialApp = 28, RULE_row = 29, RULE_column = 30, 
		RULE_columnProps = 31, RULE_mainAxisAligment = 32, RULE_crossAxisAligment = 33, 
		RULE_mainPropertiesAttr = 34, RULE_crossPropertiesAttr = 35, RULE_width = 36, 
		RULE_height = 37, RULE_text = 38, RULE_container = 39, RULE_color = 40, 
		RULE_colorValue = 41, RULE_gestureDetector = 42, RULE_card = 43, RULE_onTap = 44, 
		RULE_child = 45, RULE_widgets = 46, RULE_children = 47, RULE_navigator = 48, 
		RULE_push = 49, RULE_materialPageRoute = 50, RULE_newScreen = 51, RULE_pop = 52, 
		RULE_pushNamed = 53, RULE_listView = 54, RULE_listViewProps = 55, RULE_scrollDirection = 56, 
		RULE_reverse = 57, RULE_axisAttr = 58, RULE_declareString = 59, RULE_declareInt = 60, 
		RULE_declareBool = 61, RULE_main = 62, RULE_classMaterial = 63, RULE_floatingActionButton = 64, 
		RULE_floatingActionButtonProps = 65, RULE_onPressed = 66, RULE_appBar = 67, 
		RULE_appBarProps = 68, RULE_title = 69, RULE_listTile = 70, RULE_listTileProps = 71, 
		RULE_leading = 72, RULE_subtitle = 73, RULE_trailing = 74;
	private static String[] makeRuleNames() {
		return new String[] {
			"plur", "classInjection", "class", "classController", "controllerBody", 
			"declareRxList", "declareRxBool", "declareRxInt", "onInitFunction", "oninitBody", 
			"onCloseFunction", "oncloseBody", "classBody", "declareController", "dependenciesInje", 
			"disposeFunction", "disposeBody", "typeInjection", "injectionLazyPut", 
			"injectionPut", "constructor", "constructorBody", "constracterInit", 
			"build", "widget", "scaffold", "bodyScaffold", "return", "returnMaterialApp", 
			"row", "column", "columnProps", "mainAxisAligment", "crossAxisAligment", 
			"mainPropertiesAttr", "crossPropertiesAttr", "width", "height", "text", 
			"container", "color", "colorValue", "gestureDetector", "card", "onTap", 
			"child", "widgets", "children", "navigator", "push", "materialPageRoute", 
			"newScreen", "pop", "pushNamed", "listView", "listViewProps", "scrollDirection", 
			"reverse", "axisAttr", "declareString", "declareInt", "declareBool", 
			"main", "classMaterial", "floatingActionButton", "floatingActionButtonProps", 
			"onPressed", "appBar", "appBarProps", "title", "listTile", "listTileProps", 
			"leading", "subtitle", "trailing"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'import'", "'String'", "'int'", "'List'", "'ListView'", 
			"'scrollDirection'", "'Axis'", "'FloatingActionButton'", "'appBar'", 
			"'AppBar'", "'title'", "'ListTile'", "'leading'", "'trailing'", "'subtitle'", 
			"'reverse'", "'bool'", "'try'", "'catch'", "'main'", "'runApp'", "'MaterialApp'", 
			"'home'", "'color'", null, null, null, "'fromRGBO'", "'Color'", "'Get'", 
			"'GetView'", "'Obx'", "'GetxController'", "'Bindings'", "'implements'", 
			"'lazyPut'", "'() =>'", "'put'", "'find'", "'to'", "'void'", "'dependencies'", 
			"'dispose'", "'delete'", "'obs'", "'onInit'", "'onClose'", "'GetMaterialApp'", 
			"'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'+'", "'children'", "'''", 
			"'\"'", "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'=='", "'!='", 
			"'>'", "'>='", "'<'", "'<='", "'=>'", "'super'", "'key'", "'true'", "'false'", 
			"'Widget'", "'Container'", "'Row'", "'Column'", "'GestureDetector'", 
			"'Card'", "'Text'", "'mainAxisAlignment'", "'MainAxisAlignment'", "'crossAxisAlignment'", 
			"'CrossAxisAlignment'", "'width'", "'height'", "'onTap'", "'Navigator'", 
			"'push'", "'pushNamed'", "'final'", null, "'MaterialPageRoute'", "'builder'", 
			"'start'", "'end'", "'center'", "'stretch'", "'build'", "'BuildContext'", 
			"'context'", "'}'", "'.'", "'return'", "'Scaffold'", "'body'", "':'", 
			"'extends'", null, "'child'", "'['", "']'", "'('", "')'", "';'", "'this'", 
			"'required'", null, "'{'", null, null, null, null, "','", "'decoration'", 
			"'@override'", null, "'const'", "'onPressed'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "IMPORT_", "STRING", "INT", "LIST", "LISTVIEW", "ScrollDirectionKeyWord", 
			"Axis", "FLOATINGACTIONBUTTON", "APPBARScaff", "APPBARInScaffold", "TitleKeyWord", 
			"LISTTILE", "LeadingKeyWord", "TrailingKeyWord", "SubtitleKeyWord", "ReverseKeyWord", 
			"BOOLEAN", "TRY", "CATCH", "MainKeyWord", "RunAppKeyWord", "MaterialAppKeyWord", 
			"Home", "ColorKey", "AXISATTR", "INTEGER", "DOUBLE", "FromRGBO", "Color", 
			"Get", "GetView", "Obx", "GetxController", "Bindings", "Implements_keyWord", 
			"LazyPut", "MethodCallBack", "Put", "Find", "To", "VoidDataType", "Dependencies", 
			"Dispose", "Delete", "RxGetter", "OnInit", "OnClose", "GetMaterialApp", 
			"EQUALS", "PLUS_EQUALS", "MINUS_EQUALS", "TIMES_EQUALS", "DIVIDE_EQUALS", 
			"MODULO_EQUALS", "PLUS", "CHILDREN", "SingleQ", "DoubleQ", "MINUS", "TIMES", 
			"DIVIDE", "MODULO", "AND", "OR", "NOT", "EQUAL_TO", "NOT_EQUAL_TO", "GREATER_THAN", 
			"GREATER_THAN_OR_EQUAL_TO", "LESS_THAN", "LESS_THAN_OR_EQUAL_TO", "Arrow", 
			"Super", "Key", "True", "False", "WIDGET", "CONTAINAR", "Row", "COLUMN", 
			"GESTUREDETECTOR", "CARD", "Text", "MainAxisAligmentKeyWord", "MainAxisProperties", 
			"CrossAxisAligmentKeyWord", "CrossProperties", "WidthKeyWord", "HeightKeyWord", 
			"ONTAP", "NavigatorKeyWord", "PushMethods", "PushNamed", "FINAL", "PopMethods", 
			"MaterialPageRoute", "Builder", "START", "END", "CENTER", "STRETCH", 
			"BUILDM", "BUILDContext", "Context", "CBracketC", "Dot", "Return", "Scaffold", 
			"BodyScaffold", "TWODOT", "INHERITS_KEYWORD", "TypeWidget", "CHILD", 
			"OSP", "CSP", "OP", "CP", "SemiC", "THIS", "Required", "Name", "OBracketC", 
			"InputIntoText", "Newline", "Whitespace", "IDENTIFIER", "COMMAWidget", 
			"DecorationContainer", "OVERRIDE_", "CLASS_NAME", "CONST", "OnPressedKeyWord"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "dartParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public dartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PlurContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public ClassMaterialContext classMaterial() {
			return getRuleContext(ClassMaterialContext.class,0);
		}
		public List<ClassContext> class_() {
			return getRuleContexts(ClassContext.class);
		}
		public ClassContext class_(int i) {
			return getRuleContext(ClassContext.class,i);
		}
		public List<ClassInjectionContext> classInjection() {
			return getRuleContexts(ClassInjectionContext.class);
		}
		public ClassInjectionContext classInjection(int i) {
			return getRuleContext(ClassInjectionContext.class,i);
		}
		public List<ClassControllerContext> classController() {
			return getRuleContexts(ClassControllerContext.class);
		}
		public ClassControllerContext classController(int i) {
			return getRuleContext(ClassControllerContext.class,i);
		}
		public PlurContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plur; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterPlur(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitPlur(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitPlur(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PlurContext plur() throws RecognitionException {
		PlurContext _localctx = new PlurContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_plur);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			main();
			setState(151);
			classMaterial();
			setState(155);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(152);
					class_();
					}
					} 
				}
				setState(157);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(161);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(158);
					classInjection();
					}
					} 
				}
				setState(163);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLASS) {
				{
				{
				setState(164);
				classController();
				}
				}
				setState(169);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassInjectionContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(dartParser.CLASS, 0); }
		public TerminalNode Name() { return getToken(dartParser.Name, 0); }
		public TerminalNode Bindings() { return getToken(dartParser.Bindings, 0); }
		public TerminalNode OBracketC() { return getToken(dartParser.OBracketC, 0); }
		public DependenciesInjeContext dependenciesInje() {
			return getRuleContext(DependenciesInjeContext.class,0);
		}
		public TerminalNode CBracketC() { return getToken(dartParser.CBracketC, 0); }
		public TerminalNode Implements_keyWord() { return getToken(dartParser.Implements_keyWord, 0); }
		public ClassInjectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classInjection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterClassInjection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitClassInjection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitClassInjection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassInjectionContext classInjection() throws RecognitionException {
		ClassInjectionContext _localctx = new ClassInjectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classInjection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(CLASS);
			setState(171);
			match(Name);
			{
			setState(172);
			match(Implements_keyWord);
			}
			setState(173);
			match(Bindings);
			setState(174);
			match(OBracketC);
			setState(175);
			dependenciesInje();
			setState(176);
			match(CBracketC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(dartParser.CLASS, 0); }
		public TerminalNode Name() { return getToken(dartParser.Name, 0); }
		public TerminalNode INHERITS_KEYWORD() { return getToken(dartParser.INHERITS_KEYWORD, 0); }
		public TerminalNode TypeWidget() { return getToken(dartParser.TypeWidget, 0); }
		public TerminalNode OBracketC() { return getToken(dartParser.OBracketC, 0); }
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TerminalNode CBracketC() { return getToken(dartParser.CBracketC, 0); }
		public ClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassContext class_() throws RecognitionException {
		ClassContext _localctx = new ClassContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(CLASS);
			setState(179);
			match(Name);
			setState(180);
			match(INHERITS_KEYWORD);
			setState(181);
			match(TypeWidget);
			setState(182);
			match(OBracketC);
			setState(183);
			classBody();
			setState(184);
			match(CBracketC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassControllerContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(dartParser.CLASS, 0); }
		public TerminalNode Name() { return getToken(dartParser.Name, 0); }
		public TerminalNode INHERITS_KEYWORD() { return getToken(dartParser.INHERITS_KEYWORD, 0); }
		public TerminalNode GetxController() { return getToken(dartParser.GetxController, 0); }
		public TerminalNode OBracketC() { return getToken(dartParser.OBracketC, 0); }
		public ControllerBodyContext controllerBody() {
			return getRuleContext(ControllerBodyContext.class,0);
		}
		public TerminalNode CBracketC() { return getToken(dartParser.CBracketC, 0); }
		public ClassControllerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classController; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterClassController(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitClassController(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitClassController(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassControllerContext classController() throws RecognitionException {
		ClassControllerContext _localctx = new ClassControllerContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classController);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(CLASS);
			setState(187);
			match(Name);
			setState(188);
			match(INHERITS_KEYWORD);
			setState(189);
			match(GetxController);
			setState(190);
			match(OBracketC);
			setState(191);
			controllerBody();
			setState(192);
			match(CBracketC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ControllerBodyContext extends ParserRuleContext {
		public List<DeclareRxIntContext> declareRxInt() {
			return getRuleContexts(DeclareRxIntContext.class);
		}
		public DeclareRxIntContext declareRxInt(int i) {
			return getRuleContext(DeclareRxIntContext.class,i);
		}
		public List<DeclareRxBoolContext> declareRxBool() {
			return getRuleContexts(DeclareRxBoolContext.class);
		}
		public DeclareRxBoolContext declareRxBool(int i) {
			return getRuleContext(DeclareRxBoolContext.class,i);
		}
		public List<DeclareRxListContext> declareRxList() {
			return getRuleContexts(DeclareRxListContext.class);
		}
		public DeclareRxListContext declareRxList(int i) {
			return getRuleContext(DeclareRxListContext.class,i);
		}
		public OnInitFunctionContext onInitFunction() {
			return getRuleContext(OnInitFunctionContext.class,0);
		}
		public OnCloseFunctionContext onCloseFunction() {
			return getRuleContext(OnCloseFunctionContext.class,0);
		}
		public DisposeFunctionContext disposeFunction() {
			return getRuleContext(DisposeFunctionContext.class,0);
		}
		public ControllerBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controllerBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).enterControllerBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof dartParserListener ) ((dartParserListener)listener).exitControllerBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof dartParserVisitor ) return ((dartParserVisitor<? extends T>)visitor).visitControllerBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControllerBodyContext controllerBody() throws RecognitionException {
		ControllerBodyContext _localctx = new ControllerBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_controllerBody);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(194);
					declareRxInt();
					}
					} 
				}
				setState(199);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(203);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(200);
					declareRxBool();
					}
					} 
				}
				setState(205);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(209);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FINAL || _la==Name) {
				{
				{
				setState(206);
				declareRxList();
				}
				}
				setState(211);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(213);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(212);
				onInitFunction();
				}
				break;
			}
			setState(216);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(215);
				onCloseFunction();
				}
				break;
			}
			setState(219);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OVERRIDE_) {
				{
				setState(218);
				disposeFunction();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
